--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <header>
   
+<header class="site-header fixed-top">
 <div class="container-fluid"> 
 <nav class="navbar navbar-expand-lg navbar-light">
 
@@ -43,6 +44,7 @@
 
 </nav>
 </div>
+</header>
 
   </header>
 
