deploy: fa3f7348ca55203d45ab8d5147f9f0cf009e1cff

--- a/index.html
+++ b/index.html
@@ -10,43 +10,46 @@
 
 
   <header>
-  <header class="site-header fixed-top">
-<div class="container-fluid"> 
-<nav class="navbar navbar-expand-lg navbar-light">
+  <div class='fixed-top'>
+  <div class="alert alert-warning my-0 text-center" role="alert">
+    This site is a work in progress and may contain errors, omissions or bugs. <a href="https://forms.gle/hKAEcA5AU5rxJz3i7">Share your feedback</a>.
+  </div>
+  <header class="site-header my-0">
+    <div class="container-fluid"> 
+      <nav class="navbar navbar-expand-lg navbar-light">
 
-    <div class="container"> 
+        <div class="container">
+          
 
-    <b><a class="navbar-brand" href="/funding-public-safety/">Funding Public Safety</a></b>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+          <b><a class="navbar-brand" href="/funding-public-safety/">Funding Public Safety</a></b>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <div class="collapse navbar-collapse nav-items" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/funding-public-safety/about-measure-z">About Measure Z</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/funding-public-safety/spending">Spending</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/funding-public-safety/program-impacts">Impacts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/funding-public-safety/get-involved">Get Involved</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/funding-public-safety/about-funding-public-safety">About FPS</a>
-        </li>
-      </ul>
+          <div class="collapse navbar-collapse nav-items" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/funding-public-safety/about-measure-z">About Measure Z</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/funding-public-safety/spending">Spending</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/funding-public-safety/program-impacts">Impacts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/funding-public-safety/get-involved">Get Involved</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/funding-public-safety/about-funding-public-safety">About FPS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
-
-    </div>
-
-
-</nav>
+  </header>
 </div>
-</header>
 
   </header>
 
